city and country added, documentation updated
