# server/src/main/java/com/ldg/main/config/WebSecurityConfig.java
@@ -57,7 +57,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
         http.authorizeRequests()
                 .antMatchers("/api/ads/my", "/api/ads/other").authenticated()
-                .antMatchers(HttpMethod.GET, "/api/ad_category").permitAll()
+                .antMatchers(HttpMethod.GET, "/api/ad_category", "/api/country").permitAll()
                 .antMatchers(HttpMethod.GET, "/api/roles").permitAll()
                 .antMatchers(HttpMethod.GET, "/api/ads", "/api/ads/*").permitAll()
                 .antMatchers("/api/auth/login").permitAll()
